--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
             "Sofa\\LaravelKahlan\\": "src"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
